# InfotecsIntership

./: CMakeLists.txt  README.md
Program1/: CMakeLists.txt
Program1/source/: bufferprocesses.cpp  bufferprocesses.h  client.cpp  client.h  handler.cpp  handler.h  main.cpp
Program2/: CMakeLists.txt
Program2/source/: main.cpp  server.cpp  server.h
